tests/mm0_mmu/fail/bad-sort1342.mmu
-- bad modifier order
(sort s1342 pure provable free strict)